# pyngpool

./: .gitignore  CMakeLists.txt  pyproject.toml
bindings/: bindings.cpp
pyngpool/: __init__.py
